# gnome-university-code-examples

./: README.md
src/basic-gio/socket-example/: Makefile  diagramm.uml  hsr-adapter.c  hsr-adapter.h  hsr-calc-impl.c  hsr-calc-impl.h  hsr-client.c  hsr-icalc.c  hsr-icalc.h  hsr-proxy.c  hsr-proxy.h  hsr-server.c
src/basic-gtk/: Makefile  README.md  basic.c  basic_clipboard.c  clipboard  sync.c  sync_window.c  sync_window.h  text_window.c  text_window.h  textfileviewer.c
src/gtknotebook-example/: Makefile  gu_button.c  gu_button.h  gu_note.c  gu_note.h  gu_window.c
src/gtksourceview-example/: .geanyprj  Makefile  gucodeviewer.c  gucodeviewer.h  main.c  meson.build
src/gtksourceview-example/po/: POTFILES  ab.po  af.po  am.po  an.po  ang.po  ar.po  as.po  ast.po  az.po  az_IR.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  eco  el.po  en.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.mo  es.po  et.po  eu.po  fa.po  fi.po  (+83 more)
src/gtksourceview-example/src/: gucodeviewer.gresource.xml  gucodeviewer.h  gucodeviewer.ui  gucodeviewerapp.c  gucodeviewerapp.h  gucodeviewerappwindow.c  gucodeviewerappwindow.h  main.c  meson.build
src/notebook/: .anjuta_sym_db.db  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  gu_window.c  gu_window.h  libtool  main.c
src/notebook/.anjuta/: default.profile
src/notebook/Debug/: Makefile  config.status  libtool
src/notebook/Debug/po/: Makefile  Makefile.in  POTFILES
src/notebook/Debug/src/: Makefile  notebook
src/notebook/Debug/src/.deps/: main.Po
src/notebook/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/notebook/po/: Makefile  Makefile.in
src/notebook/src/: Makefile  Makefile.am  Makefile.in  main.c  notebook
src/notebook/src/.deps/: gu_button.Po  gu_note.Po  gu_window.Po  main.Po
